--- a/css/main-btm.css
+++ b/css/main-btm.css
@@ -1,19 +1,34 @@
+body {
+    background-color: #ddd6d6;
+}
+
 main {
     width: 80%;
     margin: 3vh 0 0 15%;
     display: flex;
     flex-wrap: nowrap;
-
+    background-color: white;
 }
 
 .center-content {
     width: 60%;
-    border: solid 1px;
-    
+    border: solid 1px;  
 }
 
 .content {
     text-align: center;
+}
+
+.center-content > .info-box {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.center-content > .info-box > .city{
+    width: 48%;
+    border: solid 1px;
+
 }
 
 .side-content {
